# pyocf

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.txt  CONTRIBUTORS.txt  LICENSE.txt  MANIFEST.in  Makefile  README.rst  notes.mah  setup.cfg
.github/workflows/: lint.yml  test.yml
docs/: Makefile
docs/source/: api.rst  conf.py  contributing.rst  index.rst  installing.rst  using.rst
docs/source/_templates/: autotemplate.rst
src/pyocf/: __init__.py  api.py  captable.py  registry.py  simplebase.py  utils.py
src/pyocf/enums/: __init__.py  accrualperiodtype.py  addresstype.py  allocationtype.py  authorizedshares.py  compensationtype.py  compoundingtype.py  conversionmechanismtype.py  conversionrighttype.py  conversiontimingtype.py  conversiontriggertype.py  convertibletype.py  daycounttype.py  emailtype.py  filetype.py  interestpayouttype.py  objecttype.py  ocfversiontype.py  optiontype.py  parentsecuritytype.py  periodtype.py  phonetype.py  quantitysourcetype.py  roundingtype.py  stakeholderrelationshiptype.py  stakeholderstatustype.py  stakeholdertype.py  stockclasstype.py  stockissuancetype.py  stockplancancellationbehaviortype.py  terminationwindowtype.py  valuationbasedformulatype.py  valuationtype.py  vestingdayofmonth.py  vestingtriggertype.py
src/pyocf/files/: __init__.py  documentsfile.py  financingsfile.py  ocfmanifestfile.py  stakeholdersfile.py  stockclassesfile.py  stocklegendtemplatesfile.py  stockplansfile.py  transactionsfile.py  valuationsfile.py  vestingtermsfile.py
tests/: test_basic.py  test_load.py  test_save.py
utils/: enum.mako  generate.py  object.mako
(+157 files in other folders)
