[metadata]
name = pyocf
version = 1.1.0.dev0
description = Open Captable Format objects and parser
long_description = file: README.rst, CONTRIBUTORS.txt, CHANGES.txt
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: Office/Business :: Financial
keywords = captable, ocf
author = Lennart Regebro
author_email = lennart.regebro@fidelity.com
license = MIT
project_urls =
    Documentation = https://pyocf.readthedocs.io/
    Source Code = https://github.com/Shoobx/pyocf
    OCF = https://open-cap-table-coalition.github.io/Open-Cap-Format-OCF/

[options]
python_requires = >=3.9
install_requires =
    setuptools
    pydantic >= 2.0.0
    packaging
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    = src
test_suite = tests

[options.packages.find]
where = src

[options.extras_require]
build =
    autodoc-pydantic
    black
    flake8
    mako
    check-manifest
    pyroma
    pytest
    pytest-cov
    sphinx
    sphinx_rtd_theme
    zest.releaser[recommended]

[bdist_wheel]
universal=1

[flake8]
max-line-length=120
# Pydantic constr syntax breaks a F722, and black insists on breaking W503
ignore=F722, W503
